# pb_rm_simulation

./: .gitignore  .gitmodules  LICENSE  README.md  build.sh  dockerfile  mapping.sh  nav.sh  save_grid_map.sh  save_pcd.sh
.devcontainer/: devcontainer.json
FAST_LIO/config/: avia.yaml  mid360.yaml
FAST_LIO/launch/: mapping.launch.py
FAST_LIO/rviz/: fastlio.rviz
FAST_LIO/src/: laserMapping.cpp
livox_laser_simulation_RO2/: CMakeLists(new).txt  CMakeLists.txt  LICENSE  README.md
livox_laser_simulation_RO2/src/: csv_main.cpp  livox_points_plugin.cpp
livox_laser_simulation_RO2/urdf/: horizon.xacro  mid360.xacro  mid40.xacro  tele.xacro
pb_rm_simulation/: package.xml
pb_rm_simulation/meshes/: bot.dae  hokuyo.dae
pb_rm_simulation/meshes/RMUC2023_world/: model.config
pb_rm_simulation/meshes/RMUC2023_world/meshes/: rm_env.dae
pb_rm_simulation/meshes/RMUC_world/: place.dae
pb_rm_simulation/urdf/: waking_robot.xacro
pb_rm_simulation/world/RMUC2023_world/: RMUC2023_world.world
pb_rm_simulation/world/RMUC_world/: rmuc.world
pb_rm_simulation/world/auto_world/: auto_world.world
src/rm_decision/: Nav2_API.md  README.md  package.xml  setup.cfg  setup.py
src/rm_decision/launch/: pb_auto_fsm_launch.py
src/rm_decision/rm_decision/: callback_msg.py  pb_auto_fsm.py  robot_navigator.py  utility.py
src/rm_decision/rm_decision/config/: goal.yaml
src/rm_decision/test/: test_line_iterator.py
src/rm_decision_interfaces/: CMakeLists.txt  package.xml
src/rm_decision_interfaces/msg/: AllRobotHP.msg  FriendLocation.msg  RobotStatus.msg
src/rm_localization/FAST_LIO/: CMakeLists.txt
src/rm_localization/FAST_LIO/Log/: mat_pre.txt
src/rm_localization/FAST_LIO/config/: avia.yaml  horizon.yaml  m2dgr.yaml  mid360.yaml  ouster64.yaml  velodyne.yaml
src/rm_localization/FAST_LIO/launch/: mapping_avia.launch.py  mapping_horizon.launch.py  mapping_m2dgr.launch.py  mapping_mid360.launch.py  mapping_ouster64.launch.py  mapping_velodyne.launch.py
src/rm_localization/FAST_LIO/rviz_cfg/: fastlio.rviz  m2dgr.rviz
src/rm_localization/FAST_LIO/src/: laserMapping.cpp
src/rm_localization/icp_localization_ros2/: README.md
src/rm_localization/icp_localization_ros2/config/: node_params.yaml
src/rm_localization/icp_localization_ros2/launch/: bringup.launch.py
src/rm_localization/icp_localization_ros2/src/: localizer_node.cpp
src/rm_localization/icp_registration/: CMakeLists.txt  package.xml
src/rm_localization/icp_registration/config/: icp.yaml
src/rm_localization/icp_registration/include/icp_registration/: icp_registration.hpp
src/rm_localization/icp_registration/launch/: icp.launch.py
src/rm_localization/icp_registration/src/: icp_registration.cpp
src/rm_nav_bringup/: CMakeLists.txt  package.xml
src/rm_nav_bringup/config/reality/: MID360_config.json  fastlio_mid360_real.yaml  measurement_params_real.yaml  nav2_params_real.yaml  segmentation_real.yaml
src/rm_nav_bringup/config/simulation/: fastlio_mid360_sim.yaml  icp_registration_sim.yaml  mapper_params_localization_sim.yaml  mapper_params_online_async_sim.yaml  measurement_params_sim.yaml  nav2_params_sim.yaml  pointlio_mid360_sim.yaml  segmentation_sim.yaml
src/rm_nav_bringup/launch/: bringup_real.launch.py  bringup_sim.launch.py
src/rm_nav_bringup/map/: RMUC.pgm  RMUC.yaml  RMUL.data  RMUL.pgm  RMUL.yaml
src/rm_nav_bringup/rviz/: fastlio.rviz  pointlio.rviz
src/rm_nav_bringup/urdf/: sentry_robot_real.xacro  sentry_robot_sim.xacro
src/rm_navigation/fake_vel_transform/: CMakeLists.txt  README.md  package.xml
src/rm_navigation/fake_vel_transform/include/fake_vel_transform/: fake_vel_transform.hpp
src/rm_navigation/fake_vel_transform/launch/: fake_vel_transform.launch.py
src/rm_navigation/fake_vel_transform/src/: fake_vel_transform.cpp
src/rm_navigation/launch/: bringup_launch.py  bringup_no_amcl_launch.py  localization_launch.py  online_async_launch.py
src/rm_navigation/map/: map.pgm  map.yaml
src/rm_navigation/params/: mapper_params_online_async.yaml  nav2_params.yaml
src/rm_navigation/rm_navigation/: CMakeLists.txt  package.xml
src/rm_simulation/livox_laser_simulation_RO2/: CMakeLists.txt  package.xml
src/rm_simulation/livox_laser_simulation_RO2/include/ros2_livox/: csv_reader.hpp  livox_points_plugin.h
src/rm_simulation/livox_laser_simulation_RO2/src/: livox_ode_multiray_shape.cpp  livox_points_plugin.cpp
src/rm_simulation/livox_laser_simulation_RO2/urdf/: HAP.xacro  avia.xacro  mid360.xacro  mid70.xacro
src/rm_simulation/pb_rm_simulation/: CMakeLists.txt  package.xml
src/rm_simulation/pb_rm_simulation/launch/: race.launch.py  rm_simulation.launch.py
src/rm_simulation/pb_rm_simulation/meshes/: mid360.stl
src/rm_simulation/pb_rm_simulation/meshes/RMUC2023_world/: model.sdf
src/rm_simulation/pb_rm_simulation/meshes/RMUC2023_world/preview/: downsampled_rm_pt.pcd
src/rm_simulation/pb_rm_simulation/meshes/RMUC2024_world/: model.config  model.sdf
src/rm_simulation/pb_rm_simulation/meshes/RMUC2024_world/meshes/: RMUC_2024.stl
src/rm_simulation/pb_rm_simulation/meshes/auto_world/: auto_world.dae
src/rm_simulation/pb_rm_simulation/meshes/obstacles/obstacle1/: model.sdf
src/rm_simulation/pb_rm_simulation/meshes/obstacles/obstacle3/: model.sdf
src/rm_simulation/pb_rm_simulation/meshes/obstacles/obstacle4/: model.sdf
src/rm_simulation/pb_rm_simulation/meshes/obstacles/obstacle5/: model.sdf
src/rm_simulation/pb_rm_simulation/meshes/obstacles/obstacle6/: model.sdf
src/rm_simulation/pb_rm_simulation/meshes/obstacles/obstacle8/: model.sdf
src/rm_simulation/pb_rm_simulation/rviz/: rviz2.rviz
src/rm_simulation/pb_rm_simulation/urdf/: simulation_waking_robot.xacro  waking_robot.xacro
src/rm_simulation/pb_rm_simulation/world/RMUC2024_world/: RMUC2024_world.world
src/rm_simulation/pb_rm_simulation/world/RMUC_world/: model.sdf
src/rm_simulation/pb_rm_simulation/world/RMUL2024_world/: RMUL2024_world.world  RMUL2024_world_dynamic_obstacles.world  model.config  model.sdf
src/rm_simulation/pb_rm_simulation/world/hbut_rmuc_world/: hbut_rmuc_world.world
(+18 files in other folders)
